# auth_rust

./: .env.example  Cargo.toml
archive/database/refresh_tokens/: create.sql
archive/database/table/refresh_tokens/: create.sql
archive/database/table/users/: create.sql  create_02.sql  insert.sql
archive/database/users/: create.sql
src/: main.rs
src/app/: error.rs  state.rs
src/controllers/auth/: login.rs  logout.rs  me.rs  mod.rs  refresh_token.rs  utils.rs
src/controllers/users/: core.rs
src/middleware/: auth.rs  mod.rs  require_admin.rs  require_role.rs
src/routers/: mod.rs
src/server/: mod.rs
src/utils/: env.rs
tests/: db_test.rs  env_test.rs  jwt_test.rs  password_test.rs  password_tests.rs
