[package]
name = "authrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1", features = ["full"]}
serde_json = "1"
dotenv = "0.15"
thiserror = "2.0.12"
serde = { version = "1", features = ["derive"]}
tower-http = { version = "0.6.4", features = ["cors"]}
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"]}
jsonwebtoken = "9"
async-trait = "0.1"
headers = "0.4"
sha2 = "0.10.9"
base64 = "0.22.1"

[dependencies.sqlx]
version = "0.8.4"
features = [
    "runtime-tokio-native-tls", 
    "postgres", 
    "macros", 
    "chrono", 
    "uuid",
]


