[package]
name = "authrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
argon2 = { version = "0.5", features = ["std"]}
async-trait = "0.1"
base64 = "0.22.1"
base64ct = { version = "1.8", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"]}
cookie = "0.18.1"
dotenv = "0.15"
hmac = "0.12.1"
serde_json = "1"
serde = { version = "1", features = ["derive"]}
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
jsonwebtoken = "9"
headers = "0.4"
futures = "0.3.31"
getrandom = "0.3.3"
tower-http = { version = "0.6.4", features = ["cors"]}
tokio = { version = "1", features = ["full"]}
thiserror = "2.0.12"
tracing = "0.1.41"
time = "0.3.43"

[dependencies.sqlx]
version = "0.8.4"
features = [
    "runtime-tokio-native-tls", 
    "postgres", 
    "macros", 
    "chrono", 
    "uuid",
    "ipnet"
]


